# suno-playlist-downloader-fork

./: .gitignore  README.md  cli.py  init.py  pyproject.toml  setup-git.sh  sync_audio.py
suno_downloader/: __main__.py  api.py  auth_fetch.py  bw_helper.py  cli.py  utils.py
